--- a/nginx.conf
+++ b/nginx.conf
@@ -7,23 +7,18 @@ server {
     access_log /var/log/nginx/hotel.caffeedev.com-access.log;
     error_log /var/log/nginx/hotel.caffeedev.com-error.log;
 
-    # CORS Headers (si es necesario)
-    add_header Access-Control-Allow-Origin *;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-    add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-
     # Manejar preflight requests
     if ($request_method = 'OPTIONS') {
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-        add_header Content-Length 0;
-        add_header Content-Type text/plain;
         return 204;
     }
 
     # Proxy al backend
     location / {
+        # CORS Headers
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
+
         proxy_pass http://localhost:3022;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
