--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
 
+    // TypeORM decorators
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
     // Best practices
     "strict": true,
     "skipLibCheck": true,
