--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "express": "^5.2.1",
         "reflect-metadata": "^0.2.2",
         "sql.js": "^1.13.0",
-        "typeorm": "^0.3.28"
+        "typeorm": "^0.3.28",
+        "uuid": "^13.0.0"
     }
 }
